# markitdown-mcp

./: README.md  markitdown_server.py  mcp.example.json  pyproject.toml
tools/: __init__.py  markitdown_tools.py  toolhandler.py
